modified css, removed html onclick attr

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <iframe id="composerIframe" src=""></iframe>
       </div>
 
-      <input class="pure-button button-blue" id="closeInfo" type="button" value="back to game" onclick="closeComposerInfo();">
+      <input class="pure-button button-blue" id="closeInfo" type="button" value="back to game">
 
     </div>
 
